# debgpt

./: .gitignore  CHANGELOG.md  Makefile  README.md  conda.yml  demo.sh  pyproject.toml  replay.py  todo.md
debgpt/: __init__.py  backend.py  cli.py  debian.py  defaults.py  frontend.py  llm.py  main_cli.py  policy.py  replay.py  task.py
debian/: changelog  control  copyright  lintian-overrides  manpages  rules
doc/: conda-minimal.yml  conda.yml  ideas.md  install-and-usage.md  install.md  llm-evaluation.md  llm-selection.md  usage.md
etc/: config.toml  env.toml
examples/: 0d4dcf50-ba5a-480b-8126-7e8c5d95cf62.json  1414f978-7cd9-45b3-a46f-d4cfe1842c33.json  1c6e9d44-f402-4236-9567-b4011d864f7c.json  38d71c1a-3a3c-41f2-977f-569907604971.json  42387633-14a3-4cf3-97e1-d3e0e1c8ac5f.json  540b6093-d4db-4782-a789-69bf02085673.json  5b897a69-c735-41f9-b656-7a3bd6575b79.json  6ae3b04f-a406-4eb9-8cd0-1e540b850ca9.json  6bb4cb48-2823-452d-be80-b9d84b976ef6.json  6bc35248-ffe7-4bc3-93a2-0298cf45dbae.json  84d5a49c-8436-4970-9955-d14592ef1de1.json  95e9759b-1b67-49d4-854a-2dedfff07640.json  bab71c6f-1102-41ed-831b-897c80e3acfb.json  c7e40063-003e-4b04-b481-27943d1ad93f.json  d346152c-dc0c-4291-b8c6-f3c3f13e2154.json  da737d4c-2e93-4962-a685-2a0396d7affb.json  dd62d15a-723a-4f57-b8d2-6e3212ebcfe3.json  download-materials.sh  e0f13937-9891-4681-bfa2-ecb0518e3b01.json  e4d7fc9f-7469-4cad-959d-373b89498663-initmsg.txt  e4d7fc9f-7469-4cad-959d-373b89498663.json  e98f8167-be4d-4c27-bc49-ac4b5411258f.json  ee171968-e5c6-49ee-9934-d814f99ea9ee.json
tests/: test_cli.py  test_debian.py  (+2 more)
